--- a/datetime-picker.scss
+++ b/datetime-picker.scss
@@ -8,15 +8,13 @@
 }
 
 .datetime-picker-dialog {
-  position: relative;
-  top: 0;
-  left: 0;
-  margin-top: -30px;
+//  position: relative;
+  //  margin-top: -30px;
   //  margin-left: -10px;
 
   //  margin-left: -10px;
   //  : -16px;
-  z-index: 1000;
+  //  z-index: 1000;
 }
 
 .weekday {
