--- a/datetime-picker.css
+++ b/datetime-picker.css
@@ -5,6 +5,10 @@
 .datetime-input {
   padding: 5px; }
 
+.invalid {
+  font-weight: bold;
+  color: red; }
+
 .weekday .weekday-name {
   font-weight: 500;
   width: 36px;
@@ -46,7 +50,8 @@
 .time-view {
   background: #cdcdcd;
   padding: 16px;
-  height: 100%; }
+  height: 250px;
+  margin-left: 8px; }
   .time-view .time-selector {
     padding: 10px; }
   .time-view input[type=text] {
