--- a/datetime-picker.scss
+++ b/datetime-picker.scss
@@ -1,3 +1,8 @@
+$black: #000;
+
+$calendar-title: $black;
+$calendar-heading: #595959;
+
 :host {
   display: block;
   font-family: 'Roboto 2', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -7,14 +12,9 @@
   padding: 5px;
 }
 
-.datetime-picker-dialog {
-//  position: relative;
-  //  margin-top: -30px;
-  //  margin-left: -10px;
-
-  //  margin-left: -10px;
-  //  : -16px;
-  //  z-index: 1000;
+.invalid {
+  font-weight: bold;
+  color: red;
 }
 
 .weekday {
@@ -63,7 +63,7 @@
     }
   }
   .weekdays {
-    background: #595959;
+    background: $calendar-heading;
     color: #fff;
     padding: 10px 0;
     .weekday-name {
@@ -77,7 +77,8 @@
 .time-view {
   background: #cdcdcd;
   padding: 16px;
-  height: 100%;
+  height: 250px;
+  margin-left: 8px;
 
   .time-selector {
     padding: 10px;
